--- a/Nagaira.WebApi.Utilities/Nagaira.WebApi.Utilities.csproj
+++ b/Nagaira.WebApi.Utilities/Nagaira.WebApi.Utilities.csproj
@@ -12,6 +12,8 @@
 	<ImplicitUsings>enable</ImplicitUsings>
 	<LangVersion>10.0</LangVersion>
 	<Nullable>enable</Nullable>
+  <RepositoryType>git</RepositoryType>
+  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 </PropertyGroup>
 
 <ItemGroup>
